Select : fix display issue on ie

--- a/src/alto-ui/Form/Select/Select.scss
+++ b/src/alto-ui/Form/Select/Select.scss
@@ -100,5 +100,6 @@
   @extend %text-ellipsis;
 
   flex: 1;
+  flex-basis: auto;
   min-width: 0;
 }
